Fixing layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,8 @@ a {
   display: flex;
   flex-direction: column;
   /* height: 100%; */
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  min-height: 100dvh;
 }
 
 
@@ -167,8 +168,7 @@ footer p {
   flex-direction: column;
   align-items: center;
   gap: 2em;
-  /* margin: auto; */
-  margin-top: 1em;
+  margin: auto;
 }
 
 .pct-calculators-container {
